test: 챌린지 팀 목록 조회, 챌린지 팀 수정 테스트 작성